Register satellites with the pipe list on world load